--- a/assistente3/pom.xml
+++ b/assistente3/pom.xml
@@ -73,7 +73,13 @@
 			    <groupId>org.springframework.boot</groupId>
 			    <artifactId>spring-boot-starter-webflux</artifactId>
 			</dependency>
+			<dependency>
+    	<groupId>org.apache.pdfbox</groupId>
+		    <artifactId>pdfbox</artifactId>
+		    <version>2.0.29</version>
+		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
